src/test/ui/issues/issue-49074.stderr
error[E0658]: The attribute `marco_use` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/issue-49074.rs:3:3
   |
LL | #[marco_use] // typo
   |   ^^^^^^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
